--- a/index.html
+++ b/index.html
@@ -25,24 +25,45 @@
 
     <!-- Client page -->
     <div id="Client" class="pageContent">
+        <h3>Client Information</h3>
+        <p>Tell us a bit about you.</p>
+        Choose a Category:
+        <select id="dietSelect" name="dietSelect" onchange="availListProductChoices(this.id, 'displayProduct')">
+            <option value=""></option>
+            <option value="Vegetarian">Vegetarian</option>
+            <option value="GlutenFree">GlutenFree</option>
+            <option value="Organic">Organic</option>
+            <option value="None">None</option>
+        </select>
 
     </div>
 
 
     <!-- Product page -->
     <div id="Product" class="pageContent">
+        <h3>Your targeted products</h3>
+        <p>We preselected products based on your restrictions.</p>
+        Choose items to buy:
+        <div id="displayProduct"></div>
+        <button id="addCart" type="button" class="block" onclick="selectedItems()">
+            Add selected items to cart.
+        </button>
 
     </div>
 
 
     <!-- Cart page -->
     <div id="Cart" class="pageContent">
+        <h3>Cart</h3>
+        <p>Here is your cart.</p>
+        <div id="displayCart"></div>
 
     </div>
 
 
     <script src="products.js"></script>
     <script src="main.js"></script>
+    
 
     <footer>Site Created By: Keon, Khalid, Owen and Shivan</footer>
 </body>
