filtered products based on the users restrictions

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
 
     <div class="footer">
-        <footer>Site Created By: Keon, Khalid, Owen and Shivan</footer>
+        Site Created By: Keon, Khalid, Owen and Shivan
     </div>
     
     <script src="products.js"></script>
